test/mutation_analysis/s0412_fizz_buzz/hafis/ablation_o3_r50/mutants/2/result.txt
./test/mutation_analysis/s0412_fizz_buzz/hafis/ablation_o3_r50/mutants/2/Solution.java:28: error: unreachable statement
        return result;
        ^
1 error
